# home-assistant-netlink

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  hacs.json  pyproject.toml
.claude/agents/: ci_dev.md  config_flow.md  coordinator.md  diagnostics.md  entities.md  netlink.md  translations.md
.github/: copilot-instructions.md  renovate.json
.github/workflows/: hacs.yaml  hassfest.yaml  linting.yaml  pr-labels.yaml  release-drafter.yaml  release.yaml  sync-labels.yaml
custom_components/netlink/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  icons.json  manifest.json  number.py  select.py  sensor.py  services.yaml  strings.json  switch.py
custom_components/netlink/translations/: en.json  nl.json
docs/: faq.md
