[project]
name = "netlink"
version = "0.0.0"
description = "NetLink integration for Home Assistant"
authors = [{ name = "Klaas Schoute", email = "k.schoute@mrgreenoffices.nl"}]
maintainers = [{name = "Klaas Schoute", email = "k.schoute@mrgreenoffices.nl"}]
license = "LGPL-3.0-only"
readme = "README.md"
keywords = [
  "custom integration",
  "home assistant",
  "home-assistant",
  "homeassistant",
  "integration",
  "netlink",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3",
]
requires-python = ">=3.14.2"
dependencies = [
    "homeassistant>=2026.3.0",
]

[dependency-groups]
dev = [
    "pre-commit-hooks==6.0.0",
    "prek==0.3.10",
    "ruff==0.15.12",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["custom_components/netlink"]

[tool.ruff]
src = ["custom_components/netlink"]

[tool.ruff.lint.flake8-import-conventions.extend-aliases]
"homeassistant.helpers.area_registry" = "ar"
"homeassistant.helpers.config_validation" = "cv"
"homeassistant.helpers.device_registry" = "dr"
"homeassistant.helpers.entity_registry" = "er"
"homeassistant.helpers.issue_registry" = "ir"
voluptuous = "vol"

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = [
    "homeassistant",
]
combine-as-imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
